test/compile_errors/syntax_error.ivy
#lang ivy1.7
type nat
relation test(: nat)